--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "another way to share files",
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^11.0.0",
     "file-type": "^16.5.3",
     "got": "^11.8.3",
     "tgsnake": "^2.0.0-beta.8"
