--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "filsaverobot",
+  "name": "ratumediasaver",
   "version": "1.0.0",
   "description": "another way to share files",
   "main": "index.js",
   "dependencies": {
-    "dotenv": "^11.0.0",
-    "file-type": "^16.5.3",
-    "got": "^11.8.3",
-    "tgsnake": "./tgsnake-dev-build.tgz"
+    "file-type": "^17.1.1",
+    "got": "^12.0.1",
+    "telegraf": "^4.5.2",
+    "tgsnake": "^2.0.0-beta.9"
   },
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "SoraHearts",
   "license": "ISC",
-  "keywords": []
+  "keywords": [],
+  "repository": "https://github.com/BimoSora/RatuMediaSaver"
 }
