--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "another way to share files",
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^11.0.0",
     "file-type": "^17.1.1",
     "got": "^12.0.1",
     "telegraf": "^4.5.2",
