--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "file-type": "16.5.3",
     "got": "11.8.3",
     "telegraf": "^4.5.2",
-    "tgsnake": "^2.0.0-beta.9"
+    "tgsnake": "./tgsnake-dev-build.tgz"
   },
   "scripts": {
     "start": "node index.js",
