--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "dotenv": "^11.0.0",
+    "get": "^1.4.0",
     "got": "11.8.3",
     "tgsnake": "./tgsnake-dev-build.tgz",
     "youtube-dl": "^3.5.0",
