--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "got": "11.8.3",
     "request": "^2.88.2",
     "tgsnake": "./tgsnake-dev-build.tgz",
+    "url": "^0.11.0",
     "youtube-dl": "^3.5.0",
     "youtube-dl-exec": "^2.0.2"
   },
